# rust-mir-checker

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: build.yml
apron-sys/: Cargo.toml  README.md  build.rs
apron-sys/src/: apron_sys_wrapper.c  apron_sys_wrapper.h  lib.rs
licenses/: APRON-LGPL  MIRI-APACHE
macros/src/: lib.rs
scripts/: README.md  graphviz.py
scripts/evaluations/: count_warning.py  run_evaluation.py  run_evaluation_parallel.py
scripts/real-world-crates/: crawler.py  run_evaluation.py
src/: lib.rs  utils.rs
src/analysis/: abstract_domain.rs  analysis_result.rs  callback.rs  crate_context.rs  diagnostics.rs  global_context.rs  option.rs  wto.rs  z3_solver.rs
src/checker/: assertion_checker.rs  checker_trait.rs
tests/: README.md  run.py
tests/safe-bugs/: README.md
tests/unit-tests/: README.md
tests/unsafe-bugs/: README.md
trophy-case/: README.md
trophy-case/bitvec-test/: Cargo.toml
trophy-case/brotli-test/: Cargo.toml
trophy-case/brotli-test2/: Cargo.toml
trophy-case/brotli-test3/: Cargo.toml
trophy-case/byte-unit-test/: Cargo.toml
trophy-case/bytemuck-test/: Cargo.toml
trophy-case/executable-memory-test/: Cargo.toml
trophy-case/executable-memory-test2/: Cargo.toml
trophy-case/gmath-test/: Cargo.toml
trophy-case/qrcode-generator-test/: Cargo.toml
trophy-case/r1cs-test/: Cargo.toml
trophy-case/r1cs-test2/: Cargo.toml
trophy-case/runes-test/: Cargo.toml
trophy-case/runes-test2/: Cargo.toml
trophy-case/safe-transmute-test/: Cargo.toml
(+142 files in other folders)
