[package]
name = "rust-mir-checker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cargo-mir-checker"

[[bin]]
name = "mir-checker"

[dependencies]
cargo_metadata = "0.9.0"
pretty_env_logger = "0.3.1"
log = "0.4"
proc-macro2 = "=1.0.43"
log-derive = "0.3"
failure = "0.1.6"
rug = "1.11.0"
foreign-types = "0.5.0"
libc = "0.2.66"
gmp-mpfr-sys = "1.1.14"
z3-sys = "0.6.3"
itertools = "0.9.0"
lazy_static = "1.4.0"
az = "1.0.0"
serde_json = "1.0.61"
apron-sys = { path = "./apron-sys" }

[profile.release]
lto = true
